feat: initial version of the plugin

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -68,7 +68,7 @@ formatters:
 
     goimports:
       local-prefixes:
-        - git.nakama.town/fmartingr/mattermost-plugin-auto-archiver
+        - github.com/fmartingrmattermost-plugin-link-archiver
 
 output:
   formats:
