--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,20 +4,18 @@ on:
     - cron: "0 0 * * *"
   push:
     branches:
-      - main
+      - master
     tags:
       - "v*"
   pull_request:
 
 permissions:
   contents: read
-
-env:
-  IS_CI: true
+  id-token: write
 
 jobs:
   plugin-ci:
-    uses: mattermost/actions-workflows/.github/workflows/plugin-ci.yml
+    uses: mattermost/actions-workflows/.github/workflows/plugin-ci.yml@main
     secrets: inherit
     with:
-      mage-version: v1.15.0
+      golang-version: "1.24"
