--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,87 +1,50 @@
-version: "2"
+run:
+  timeout: 5m
+  modules-download-mode: readonly
+
+linters-settings:
+  gofmt:
+    simplify: true
+  goimports:
+    local-prefixes: github.com/fmartingr/mattermost-plugin-link-archiver
+  govet:
+    enable-all: true
+    disable:
+      - fieldalignment
+  misspell:
+    locale: US
 
 linters:
+  disable-all: true
   enable:
     - bodyclose
     - errcheck
     - gocritic
+    - gofmt
+    - goimports
     - gosec
+    - gosimple
+    - govet
     - ineffassign
     - misspell
     - nakedret
     - revive
-    - staticcheck # Now includes gosimple and stylecheck
+    - staticcheck
+    - stylecheck
+    - typecheck
     - unconvert
     - unused
     - whitespace
-    - govet # Ensure this is included
-
-  settings:
-    errcheck:
-      # Add any errcheck settings here
-      exclude-functions:
-        - io.Copy(*bytes.Buffer)
-
-    gocritic:
-      enabled-tags:
-        - diagnostic
-        - experimental
-        - opinionated
-        - performance
-        - style
-
-    gosec:
-      # Add gosec settings
-      excludes:
-        - G104 # Errors unhandled
-
-    staticcheck:
-      # Configure staticcheck (includes gosimple/stylecheck checks)
-      checks: ["all"]
-
-    revive:
-      # Add revive rules
-      rules:
-        - name: exported
-          disabled: false
-
-  exclusions:
-    presets:
-      - comments
-      - std-error-handling
-      - common-false-positives
-
-    rules:
-      - path: '_test\.go'
-        linters:
-          - errcheck
-          - gosec
-
-formatters:
-  enable:
-    - gofmt
-    - goimports
-
-  settings:
-    gofmt:
-      simplify: true
-
-    goimports:
-      local-prefixes:
-        - github.com/fmartingrmattermost-plugin-link-archiver
-
-output:
-  formats:
-    text:
-      path: stdout
-      colors: true
-      print-linter-name: true
-
-run:
-  timeout: 5m
-  tests: true
 
 issues:
-  max-issues-per-linter: 0
-  max-same-issues: 0
-  fix: false
+  exclude-rules:
+    - path: server/configuration.go
+      linters:
+        - unused
+    - path: _test\.go
+      linters:
+        - bodyclose
+        - scopelint # https://github.com/kyoh86/scopelint/issues/4
+    - linters:
+        - revive
+      text: unused-parameter
