--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,3 +8,5 @@ jobs:
   plugin-cd:
     uses: mattermost/actions-workflows/.github/workflows/community-plugin-cd.yml@main
     secrets: inherit
+    with:
+      golang-version: "1.24"
